Filter data, find zero crossings, find inhales and exhales, shift data if needed, calculate instantaneous frequencies using 1/deltaT

--- a/frequency_analysis.ipynb
+++ b/frequency_analysis.ipynb
@@ -17,12 +17,13 @@
    },
    "cell_type": "code",
    "source": [
-    "from dewan_h5.dewan_h5 import DewanH5\n",
+    "from dewan_h5_git.dewan_h5 import DewanH5\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from scipy import signal\n",
-    "import pathlib"
+    "from scipy.stats import zscore\n"
    ],
    "id": "initial_id",
    "outputs": [],
@@ -34,34 +35,18 @@
    "source": [
     "h5_file = []\n",
     "\n",
-    "with DewanH5('../dewan_h5/data/mouse195_sess1_D2025_1_5T15_10_50.h5') as h5:\n",
+    "with DewanH5('/opt/dev/repo/sniffing/dewan_h5_git/test/data/mouse200_sess1_D2025_2_24T16_51_53.h5') as h5:\n",
     "    h5_file = h5"
    ],
-   "id": "d4c5867ec2018ceb",
+   "id": "31c06d859f4a507c",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "print(h5_file)",
-   "id": "1a3ea82ff52d7762",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "sniff_trials = list(h5_file.sniff.keys())\n",
-    "first_sniff = h5_file.sniff[sniff_trials[0]]\n",
-    "first_sniff_shift = first_sniff - min(first_sniff)\n",
-    "first_sniff_shift = first_sniff_shift - first_sniff_shift.iloc[0]\n",
-    "[beta, alpha] = signal.butter(4, 0.5, btype='highpass', fs=360)\n",
-    "filtered = signal.filtfilt(beta, alpha, first_sniff)\n",
-    "filtered = filtered  - filtered[0]"
-   ],
-   "id": "62d27ebf707da611",
+   "source": "filter = signal.cheby2(2, 40, [0.01, 100], 'bandpass', output='sos', fs=1000)",
+   "id": "2ac00d9fa65d6a5d",
    "outputs": [],
    "execution_count": null
   },
@@ -69,14 +54,208 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "fig, ax = plt.subplots(figsize=(20,4))\n",
-    "#https://stackoverflow.com/questions/76502819/how-to-flatten-a-digital-signal-whose-baseline-jumps-up-and-down-with-python\n",
-    "x_vals = list(range(len(first_sniff)))\n",
-    "_ = ax.plot(x_vals, first_sniff_shift)\n",
-    "_ = ax.plot(x_vals, filtered)\n",
-    "_ = ax.hlines(y=[0], xmin=0, xmax=x_vals[-1])"
+    "def filter_sniff_traces(sniff_traces, filter, baseline=False, z_score=False, shift=False):\n",
+    "    filtered_traces = {}\n",
+    "    baseline_filter = signal.butter(2, 1, 'highpass', output='sos', fs=1000)\n",
+    "    for name, trace in sniff_traces.items():\n",
+    "        index = trace.index\n",
+    "        filtered_trace = signal.sosfiltfilt(filter, trace)\n",
+    "        if baseline:\n",
+    "            filtered_trace = signal.sosfiltfilt(baseline_filter, filtered_trace)\n",
+    "        if z_score:\n",
+    "            filtered_trace = zscore(filtered_trace)\n",
+    "        if shift:\n",
+    "            filtered_trace = filtered_trace - filtered_trace[0]\n",
+    "\n",
+    "        filtered_trace = pd.Series(filtered_trace, index=index)\n",
+    "        filtered_traces[name] = filtered_trace\n",
+    "    return filtered_traces"
    ],
-   "id": "31758f6db1097f06",
+   "id": "6b2d41cc81f84d74",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "filtered_traces = filter_sniff_traces(h5_file.sniff, filter, baseline=True, z_score=True)",
+   "id": "4c117da55053921",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "trial_number = 56\n",
+    "pre_fv_time = -1000\n",
+    "\n",
+    "raw_data = h5_file.sniff[trial_number].loc[pre_fv_time:]\n",
+    "filtered_trimmed_traces = filtered_traces[trial_number].loc[pre_fv_time:]\n",
+    "\n",
+    "def plot_multi_traces(traces):\n",
+    "    colors = plt.rcParams['axes.prop_cycle']()\n",
+    "    figs, axs = plt.subplots(len(traces), figsize=(10, 10), sharex=True)\n",
+    "    for i, trace in enumerate(traces):\n",
+    "        color = next(colors)['color']\n",
+    "        _ = axs[i].plot(trace, color=color)\n",
+    "        _ = axs[i].vlines(x=0, ymin=min(trace), ymax=max(trace), color='k')\n",
+    "        _ = axs[i].hlines(y=np.mean(trace), xmin=trace.index[0], xmax=trace.index[-1], color='m')\n",
+    "\n",
+    "plot_multi_traces([raw_data, filtered_trimmed_traces])"
+   ],
+   "id": "d67ea992b2e4a4c7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "crossings = np.where(np.diff(np.signbit(filtered_trimmed_traces)))[0]\n",
+    "crossings = filtered_trimmed_traces.index[crossings]\n",
+    "\n",
+    "inhale_peak, props = signal.find_peaks(filtered_trimmed_traces, distance=50, height=0.1)\n",
+    "exhalation_peak, props_2 = signal.find_peaks(filtered_trimmed_traces*-1, distance=50, height=0.1)\n",
+    "\n",
+    "inhale_x = filtered_trimmed_traces.index[inhale_peak]\n",
+    "inhale_y = filtered_trimmed_traces.loc[inhale_x]\n",
+    "inhales = pd.Series(inhale_x, index=inhale_y)\n",
+    "\n",
+    "exhale_x = filtered_trimmed_traces.index[exhalation_peak]\n",
+    "exhale_y = filtered_trimmed_traces.loc[exhale_x]\n",
+    "exhales = pd.Series(exhale_x, index=exhale_y)\n",
+    "\n",
+    "crossing_pairs = zip(crossings[:-1], crossings[1:])\n",
+    "\n",
+    "true_inhales_x = []\n",
+    "true_inhales_y = []\n",
+    "true_exhales_x = []\n",
+    "true_exhales_y = []\n",
+    "\n",
+    "inhales_prev_cross = []\n",
+    "exhales_prev_cross = []\n",
+    "for first_cross, second_cross in crossing_pairs:\n",
+    "\n",
+    "    inhale_peaks_mask = inhales.between(first_cross, second_cross)\n",
+    "    exhale_peaks_mask = exhales.between(first_cross, second_cross)\n",
+    "\n",
+    "    inhale_peaks = inhales.loc[inhale_peaks_mask]\n",
+    "    exhale_peaks = exhales.loc[exhale_peaks_mask]\n",
+    "\n",
+    "    possible_inhale = None\n",
+    "    possible_exhale = None\n",
+    "\n",
+    "    if inhale_peaks.shape[0] == 1:\n",
+    "        possible_inhale = inhale_peaks\n",
+    "    elif inhale_peaks.shape[0] > 1:\n",
+    "        max_val = inhale_peaks.index.max()\n",
+    "        max_inhale_peak = inhale_peaks.loc[max_val]\n",
+    "        possible_inhale = pd.Series(max_inhale_peak, index=[max_val])\n",
+    "\n",
+    "    if exhale_peaks.shape[0] == 1:\n",
+    "        possible_exhale = exhale_peaks\n",
+    "    elif exhale_peaks.shape[0] > 1:\n",
+    "        max_val = exhale_peaks.index.min()\n",
+    "        max_exhale_peak = exhale_peaks.loc[max_val]\n",
+    "        possible_exhale = pd.Series(max_exhale_peak, index=[max_val])\n",
+    "\n",
+    "    inhale = False\n",
+    "    if possible_inhale is None and possible_exhale is None:\n",
+    "        continue\n",
+    "    elif possible_inhale is None:\n",
+    "        inhale = False\n",
+    "    elif possible_exhale is None:\n",
+    "        inhale = True\n",
+    "    elif abs(possible_exhale.index) > possible_inhale.index:\n",
+    "        inhale = False\n",
+    "    else:\n",
+    "        inhale = True\n",
+    "\n",
+    "    if inhale:\n",
+    "        true_inhales_x.extend(possible_inhale.values)\n",
+    "        true_inhales_y.extend(possible_inhale.index.values)\n",
+    "        inhales_prev_cross.extend([first_cross])\n",
+    "    else:\n",
+    "        true_exhales_x.extend(possible_exhale.values)\n",
+    "        true_exhales_y.extend(possible_exhale.index.values)\n",
+    "        exhales_prev_cross.extend([first_cross])\n",
+    "\n",
+    "true_inhales = pd.DataFrame({'magnitude': true_inhales_y, 'crossing': inhales_prev_cross}, index=true_inhales_x)\n",
+    "true_exhales = pd.DataFrame({'magnitude': true_exhales_y, 'crossing': exhales_prev_cross}, index=true_exhales_x)"
+   ],
+   "id": "638da83159c7576e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "true_inhales_post_fv = true_inhales.loc[0:]\n",
+    "first_true_inhale = true_inhales_post_fv.iloc[0]\n",
+    "first_crossing = first_true_inhale['crossing']\n",
+    "\n",
+    "if first_crossing > 0:\n",
+    "    true_inhales.index = true_inhales.index - first_crossing\n",
+    "    true_exhales.index = true_exhales.index - first_crossing\n",
+    "    true_inhales.loc[:, 'crossing'] = true_inhales.loc[:, 'crossing'] - first_crossing\n",
+    "    true_exhales.loc[:, 'crossing'] = true_exhales.loc[:, 'crossing'] - first_crossing\n",
+    "    crossings = crossings - first_crossing\n",
+    "    filtered_trimmed_traces.index = filtered_trimmed_traces.index - first_crossing"
+   ],
+   "id": "1c8c172686511d11",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "inhale_pairs = zip(true_inhales.iloc[:-1].index, true_inhales.iloc[1:].index)\n",
+    "inhale_frequencies = []\n",
+    "inhale_times = []\n",
+    "for inhale1, inhale2 in inhale_pairs:\n",
+    "    delta_t = abs(inhale2 - inhale1)\n",
+    "    frequency = round(1 / (delta_t / 1000), 2)\n",
+    "    inhale_frequencies.append(frequency)\n",
+    "    inhale_times.append(inhale1 + (delta_t/2))\n",
+    "\n",
+    "exhale_pairs = zip(true_exhales.iloc[:-1].index, true_exhales.iloc[1:].index)\n",
+    "exhale_frequencies = []\n",
+    "exhale_times = []\n",
+    "for exhale1, exhale2 in exhale_pairs:\n",
+    "    delta_t = abs(exhale2 - exhale1)\n",
+    "    frequency = round(1 / (delta_t / 1000), 2)\n",
+    "    exhale_frequencies.append(frequency)\n",
+    "    exhale_times.append(exhale1 + (delta_t/2))\n"
+   ],
+   "id": "d55f2a73c9603013",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "fig, ax = plt.subplots(2, sharex=True, figsize=(10, 7))\n",
+    "ax[0].title.set_text(f'Trace w/ Peaks and Crossings | Trial: {trial_number}')\n",
+    "ax[1].set_ylabel('Frequency (Hz)')\n",
+    "ax[1].set_xlabel('Time (ms)')\n",
+    "ax[1].title.set_text('Instantaneous Frequency')\n",
+    "_ = ax[0].plot(filtered_trimmed_traces, color='c')\n",
+    "_ = ax[1].plot(inhale_times, inhale_frequencies, color='red', label='inhale')\n",
+    "_ = ax[1].plot(exhale_times, exhale_frequencies, color='orange', label='exhale')\n",
+    "_ = ax[0].vlines(x=0, ymin=min(filtered_trimmed_traces), ymax=max(filtered_trimmed_traces), color='k')\n",
+    "_ = ax[0].hlines(y=np.mean(filtered_trimmed_traces), xmin=filtered_trimmed_traces.index[0], xmax=filtered_trimmed_traces.index[-1], alpha=0.3, color='m')\n",
+    "_ = ax[0].scatter(crossings, np.zeros(len(crossings)), marker=\"o\", color='g')\n",
+    "_ = ax[0].scatter(true_inhales.index, true_inhales['magnitude'].values, marker='x', color='r', label='inhale')\n",
+    "_ = ax[0].scatter(true_exhales.index, true_exhales['magnitude'].values, marker='x', color='orange', label='exhale')\n",
+    "_ = ax[0].legend()\n",
+    "\n",
+    "_ = ax[1].legend(['inhale', 'exhale'])"
+   ],
+   "id": "bef822f875a599b4",
    "outputs": [],
    "execution_count": null
   },
@@ -84,7 +263,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": "",
-   "id": "1c231fdc8904ca0d",
+   "id": "4f39de4f47d2a124",
    "outputs": [],
    "execution_count": null
   }
