--- a/notebooks/frequency_analysis.ipynb
+++ b/notebooks/frequency_analysis.ipynb
@@ -1,23 +1,41 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-06T22:57:27.451646Z",
+     "start_time": "2025-05-06T22:57:27.441328Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
    ],
    "id": "ff0e5cff8cc0fe8b",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-05-06T22:57:25.608037Z",
+     "start_time": "2025-05-06T22:57:24.872306Z"
+    }
    },
    "cell_type": "code",
    "source": [
-    "from dewan_h5_git.dewan_h5 import DewanH5\n",
+    "from dewan_h5 import DewanH5\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -26,8 +44,20 @@
     "from scipy.stats import zscore\n"
    ],
    "id": "initial_id",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mModuleNotFoundError\u001B[39m                       Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[3]\u001B[39m\u001B[32m, line 6\u001B[39m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnp\u001B[39;00m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m6\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mscipy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m signal\n\u001B[32m      7\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mscipy\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mstats\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m zscore\n",
+      "\u001B[31mModuleNotFoundError\u001B[39m: No module named 'scipy'"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -35,7 +65,7 @@
    "source": [
     "h5_file = []\n",
     "\n",
-    "with DewanH5('/opt/dev/repo/sniffing/dewan_h5_git/test/data/mouse200_sess1_D2025_2_24T16_51_53.h5') as h5:\n",
+    "with DewanH5('\\\\wsl.localhost\\Fedora\\opt\\dev\\repos\\sniffing\\data\\mouse200_sess1_D2025_2_24T16_51_53.h5') as h5:\n",
     "    h5_file = h5"
    ],
    "id": "31c06d859f4a507c",
