Notebook loops through all H5 files and applies functions to the data and saves data

--- a/notebooks/frequency_analysis.ipynb
+++ b/notebooks/frequency_analysis.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-06T22:57:27.451646Z",
-     "start_time": "2025-05-06T22:57:27.441328Z"
+     "end_time": "2025-05-07T02:12:31.265841Z",
+     "start_time": "2025-05-07T02:12:31.240803Z"
     }
    },
    "cell_type": "code",
@@ -23,279 +23,134 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 33
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-06T22:57:25.608037Z",
-     "start_time": "2025-05-06T22:57:24.872306Z"
+     "end_time": "2025-05-07T02:12:31.644187Z",
+     "start_time": "2025-05-07T02:12:31.630716Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from dewan_h5 import DewanH5\n",
+    "from sniffing_dynamics.sniffing import preprocessing, plotting, analysis\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from scipy import signal\n",
-    "from scipy.stats import zscore\n"
+    "\n",
+    "from pathlib import Path"
    ],
    "id": "initial_id",
+   "outputs": [],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-07T02:13:02.195363Z",
+     "start_time": "2025-05-07T02:13:02.184376Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "## Configurables\n",
+    "\n",
+    "data_dir = Path('/mnt/r2d2/11_Data/GoodSniffData')\n",
+    "h5_files = Path(data_dir).glob('*.h5')\n",
+    "\n",
+    "lower_filter_band = 0.01  # Lower Frequency (Hz)\n",
+    "upper_filter_band = 100  # Upper Frequency (Hz)\n",
+    "pre_fv_time = -1000  # ms before FV"
+   ],
+   "id": "d33c157804c8c6e3",
+   "outputs": [],
+   "execution_count": 39
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-05-07T02:13:18.365624Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "output_dir = data_dir.joinpath('output')\n",
+    "output_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "for h5_file_path in h5_files:\n",
+    "    try:\n",
+    "        print(f'Processing {h5_file_path.name}')\n",
+    "\n",
+    "        with DewanH5(h5_file_path) as h5:\n",
+    "            results = pd.DataFrame()\n",
+    "            _concentration = h5.concentrations[h5.concentrations > 0][0]\n",
+    "            experiment_concentration = \"\".join(np.format_float_scientific(_concentration, 1).split('.'))\n",
+    "            file_output_dir = output_dir.joinpath(f'mouse-{h5.mouse}', experiment_concentration)\n",
+    "\n",
+    "            bp_filter = signal.cheby2(2, 40, [lower_filter_band, upper_filter_band], 'bandpass', output='sos', fs=1000)\n",
+    "            filtered_traces = preprocessing.filter_sniff_traces(h5.sniff, bp_filter, baseline=True, z_score=True)\n",
+    "\n",
+    "\n",
+    "            for trial_number in h5.sniff.keys():\n",
+    "                raw_data = h5.sniff[trial_number].loc[pre_fv_time:]\n",
+    "                filtered_trimmed_trace = filtered_traces[trial_number].loc[pre_fv_time:]\n",
+    "                # plotting.plot_multi_traces([raw_data, filtered_trimmed_trace])\n",
+    "                inhales, exhales, crossings = preprocessing.get_trace_features(filtered_trimmed_trace)\n",
+    "                crossing_pairs = np.fromiter(zip(crossings[:-1], crossings[1:]), dtype=object)\n",
+    "\n",
+    "                true_inhales, true_exhales = preprocessing.get_true_peaks(inhales, exhales, crossing_pairs)\n",
+    "\n",
+    "                true_inhales_post_fv = true_inhales.loc[0:]\n",
+    "                first_true_inhale = true_inhales_post_fv.iloc[0]\n",
+    "                first_crossing = first_true_inhale['crossing']\n",
+    "\n",
+    "                if first_crossing > 0:\n",
+    "                    crossings = preprocessing.offset_timestamps(first_crossing, filtered_trimmed_trace, true_inhales, true_exhales, crossings)\n",
+    "                inhale_frequencies, exhale_frequencies, inhale_times, exhale_times = analysis.calc_frequencies(true_inhales, true_exhales)\n",
+    "\n",
+    "                _columns = pd.MultiIndex.from_product([[trial_number], ['inhale_time', 'inhale_freq']], names=['Trial', 'Data'])\n",
+    "                all_trial_data = pd.DataFrame(zip(inhale_times, inhale_frequencies), columns=_columns)\n",
+    "\n",
+    "                results = pd.concat([results, all_trial_data], axis=1)\n",
+    "\n",
+    "                plot_output_dir = file_output_dir.joinpath('figures')\n",
+    "                plot_output_dir.mkdir(exist_ok=True, parents=True)\n",
+    "                plotting.plot_crossing_frequencies(filtered_trimmed_trace, true_inhales, true_exhales, inhale_frequencies, exhale_frequencies, inhale_times, exhale_times, crossings, trial_number, plot_output_dir)\n",
+    "            results_path = file_output_dir.joinpath(f'mouse-{h5.mouse}-{experiment_concentration}.xlsx')\n",
+    "            results.to_excel(results_path)\n",
+    "    except Exception:\n",
+    "        print(f'Error processing H5 file {h5_file_path}')"
+   ],
+   "id": "bef822f875a599b4",
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mModuleNotFoundError\u001B[39m                       Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[3]\u001B[39m\u001B[32m, line 6\u001B[39m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnp\u001B[39;00m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m6\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mscipy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m signal\n\u001B[32m      7\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mscipy\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mstats\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m zscore\n",
-      "\u001B[31mModuleNotFoundError\u001B[39m: No module named 'scipy'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing mouse191_sess1_D2024_12_31T10_57_0.h5\n",
+      "Error parsing licking and sniffing packets!\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse191_sess1_D2024_12_31T10_57_0.h5\n",
+      "Processing mouse192_sess1_D2024_12_30T11_42_20.h5\n"
      ]
     }
    ],
-   "execution_count": 3
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "h5_file = []\n",
-    "\n",
-    "with DewanH5('\\\\wsl.localhost\\Fedora\\opt\\dev\\repos\\sniffing\\data\\mouse200_sess1_D2025_2_24T16_51_53.h5') as h5:\n",
-    "    h5_file = h5"
-   ],
-   "id": "31c06d859f4a507c",
-   "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "filter = signal.cheby2(2, 40, [0.01, 100], 'bandpass', output='sos', fs=1000)",
-   "id": "2ac00d9fa65d6a5d",
    "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "def filter_sniff_traces(sniff_traces, filter, baseline=False, z_score=False, shift=False):\n",
-    "    filtered_traces = {}\n",
-    "    baseline_filter = signal.butter(2, 1, 'highpass', output='sos', fs=1000)\n",
-    "    for name, trace in sniff_traces.items():\n",
-    "        index = trace.index\n",
-    "        filtered_trace = signal.sosfiltfilt(filter, trace)\n",
-    "        if baseline:\n",
-    "            filtered_trace = signal.sosfiltfilt(baseline_filter, filtered_trace)\n",
-    "        if z_score:\n",
-    "            filtered_trace = zscore(filtered_trace)\n",
-    "        if shift:\n",
-    "            filtered_trace = filtered_trace - filtered_trace[0]\n",
-    "\n",
-    "        filtered_trace = pd.Series(filtered_trace, index=index)\n",
-    "        filtered_traces[name] = filtered_trace\n",
-    "    return filtered_traces"
-   ],
-   "id": "6b2d41cc81f84d74",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "filtered_traces = filter_sniff_traces(h5_file.sniff, filter, baseline=True, z_score=True)",
-   "id": "4c117da55053921",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "trial_number = 56\n",
-    "pre_fv_time = -1000\n",
-    "\n",
-    "raw_data = h5_file.sniff[trial_number].loc[pre_fv_time:]\n",
-    "filtered_trimmed_traces = filtered_traces[trial_number].loc[pre_fv_time:]\n",
-    "\n",
-    "def plot_multi_traces(traces):\n",
-    "    colors = plt.rcParams['axes.prop_cycle']()\n",
-    "    figs, axs = plt.subplots(len(traces), figsize=(10, 10), sharex=True)\n",
-    "    for i, trace in enumerate(traces):\n",
-    "        color = next(colors)['color']\n",
-    "        _ = axs[i].plot(trace, color=color)\n",
-    "        _ = axs[i].vlines(x=0, ymin=min(trace), ymax=max(trace), color='k')\n",
-    "        _ = axs[i].hlines(y=np.mean(trace), xmin=trace.index[0], xmax=trace.index[-1], color='m')\n",
-    "\n",
-    "plot_multi_traces([raw_data, filtered_trimmed_traces])"
-   ],
-   "id": "d67ea992b2e4a4c7",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "crossings = np.where(np.diff(np.signbit(filtered_trimmed_traces)))[0]\n",
-    "crossings = filtered_trimmed_traces.index[crossings]\n",
-    "\n",
-    "inhale_peak, props = signal.find_peaks(filtered_trimmed_traces, distance=50, height=0.1)\n",
-    "exhalation_peak, props_2 = signal.find_peaks(filtered_trimmed_traces*-1, distance=50, height=0.1)\n",
-    "\n",
-    "inhale_x = filtered_trimmed_traces.index[inhale_peak]\n",
-    "inhale_y = filtered_trimmed_traces.loc[inhale_x]\n",
-    "inhales = pd.Series(inhale_x, index=inhale_y)\n",
-    "\n",
-    "exhale_x = filtered_trimmed_traces.index[exhalation_peak]\n",
-    "exhale_y = filtered_trimmed_traces.loc[exhale_x]\n",
-    "exhales = pd.Series(exhale_x, index=exhale_y)\n",
-    "\n",
-    "crossing_pairs = zip(crossings[:-1], crossings[1:])\n",
-    "\n",
-    "true_inhales_x = []\n",
-    "true_inhales_y = []\n",
-    "true_exhales_x = []\n",
-    "true_exhales_y = []\n",
-    "\n",
-    "inhales_prev_cross = []\n",
-    "exhales_prev_cross = []\n",
-    "for first_cross, second_cross in crossing_pairs:\n",
-    "\n",
-    "    inhale_peaks_mask = inhales.between(first_cross, second_cross)\n",
-    "    exhale_peaks_mask = exhales.between(first_cross, second_cross)\n",
-    "\n",
-    "    inhale_peaks = inhales.loc[inhale_peaks_mask]\n",
-    "    exhale_peaks = exhales.loc[exhale_peaks_mask]\n",
-    "\n",
-    "    possible_inhale = None\n",
-    "    possible_exhale = None\n",
-    "\n",
-    "    if inhale_peaks.shape[0] == 1:\n",
-    "        possible_inhale = inhale_peaks\n",
-    "    elif inhale_peaks.shape[0] > 1:\n",
-    "        max_val = inhale_peaks.index.max()\n",
-    "        max_inhale_peak = inhale_peaks.loc[max_val]\n",
-    "        possible_inhale = pd.Series(max_inhale_peak, index=[max_val])\n",
-    "\n",
-    "    if exhale_peaks.shape[0] == 1:\n",
-    "        possible_exhale = exhale_peaks\n",
-    "    elif exhale_peaks.shape[0] > 1:\n",
-    "        max_val = exhale_peaks.index.min()\n",
-    "        max_exhale_peak = exhale_peaks.loc[max_val]\n",
-    "        possible_exhale = pd.Series(max_exhale_peak, index=[max_val])\n",
-    "\n",
-    "    inhale = False\n",
-    "    if possible_inhale is None and possible_exhale is None:\n",
-    "        continue\n",
-    "    elif possible_inhale is None:\n",
-    "        inhale = False\n",
-    "    elif possible_exhale is None:\n",
-    "        inhale = True\n",
-    "    elif abs(possible_exhale.index) > possible_inhale.index:\n",
-    "        inhale = False\n",
-    "    else:\n",
-    "        inhale = True\n",
-    "\n",
-    "    if inhale:\n",
-    "        true_inhales_x.extend(possible_inhale.values)\n",
-    "        true_inhales_y.extend(possible_inhale.index.values)\n",
-    "        inhales_prev_cross.extend([first_cross])\n",
-    "    else:\n",
-    "        true_exhales_x.extend(possible_exhale.values)\n",
-    "        true_exhales_y.extend(possible_exhale.index.values)\n",
-    "        exhales_prev_cross.extend([first_cross])\n",
-    "\n",
-    "true_inhales = pd.DataFrame({'magnitude': true_inhales_y, 'crossing': inhales_prev_cross}, index=true_inhales_x)\n",
-    "true_exhales = pd.DataFrame({'magnitude': true_exhales_y, 'crossing': exhales_prev_cross}, index=true_exhales_x)"
-   ],
-   "id": "638da83159c7576e",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "true_inhales_post_fv = true_inhales.loc[0:]\n",
-    "first_true_inhale = true_inhales_post_fv.iloc[0]\n",
-    "first_crossing = first_true_inhale['crossing']\n",
-    "\n",
-    "if first_crossing > 0:\n",
-    "    true_inhales.index = true_inhales.index - first_crossing\n",
-    "    true_exhales.index = true_exhales.index - first_crossing\n",
-    "    true_inhales.loc[:, 'crossing'] = true_inhales.loc[:, 'crossing'] - first_crossing\n",
-    "    true_exhales.loc[:, 'crossing'] = true_exhales.loc[:, 'crossing'] - first_crossing\n",
-    "    crossings = crossings - first_crossing\n",
-    "    filtered_trimmed_traces.index = filtered_trimmed_traces.index - first_crossing"
-   ],
-   "id": "1c8c172686511d11",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "inhale_pairs = zip(true_inhales.iloc[:-1].index, true_inhales.iloc[1:].index)\n",
-    "inhale_frequencies = []\n",
-    "inhale_times = []\n",
-    "for inhale1, inhale2 in inhale_pairs:\n",
-    "    delta_t = abs(inhale2 - inhale1)\n",
-    "    frequency = round(1 / (delta_t / 1000), 2)\n",
-    "    inhale_frequencies.append(frequency)\n",
-    "    inhale_times.append(inhale1 + (delta_t/2))\n",
-    "\n",
-    "exhale_pairs = zip(true_exhales.iloc[:-1].index, true_exhales.iloc[1:].index)\n",
-    "exhale_frequencies = []\n",
-    "exhale_times = []\n",
-    "for exhale1, exhale2 in exhale_pairs:\n",
-    "    delta_t = abs(exhale2 - exhale1)\n",
-    "    frequency = round(1 / (delta_t / 1000), 2)\n",
-    "    exhale_frequencies.append(frequency)\n",
-    "    exhale_times.append(exhale1 + (delta_t/2))\n"
-   ],
-   "id": "d55f2a73c9603013",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "fig, ax = plt.subplots(2, sharex=True, figsize=(10, 7))\n",
-    "ax[0].title.set_text(f'Trace w/ Peaks and Crossings | Trial: {trial_number}')\n",
-    "ax[1].set_ylabel('Frequency (Hz)')\n",
-    "ax[1].set_xlabel('Time (ms)')\n",
-    "ax[1].title.set_text('Instantaneous Frequency')\n",
-    "_ = ax[0].plot(filtered_trimmed_traces, color='c')\n",
-    "_ = ax[1].plot(inhale_times, inhale_frequencies, color='red', label='inhale')\n",
-    "_ = ax[1].plot(exhale_times, exhale_frequencies, color='orange', label='exhale')\n",
-    "_ = ax[0].vlines(x=0, ymin=min(filtered_trimmed_traces), ymax=max(filtered_trimmed_traces), color='k')\n",
-    "_ = ax[0].hlines(y=np.mean(filtered_trimmed_traces), xmin=filtered_trimmed_traces.index[0], xmax=filtered_trimmed_traces.index[-1], alpha=0.3, color='m')\n",
-    "_ = ax[0].scatter(crossings, np.zeros(len(crossings)), marker=\"o\", color='g')\n",
-    "_ = ax[0].scatter(true_inhales.index, true_inhales['magnitude'].values, marker='x', color='r', label='inhale')\n",
-    "_ = ax[0].scatter(true_exhales.index, true_exhales['magnitude'].values, marker='x', color='orange', label='exhale')\n",
-    "_ = ax[0].legend()\n",
-    "\n",
-    "_ = ax[1].legend(['inhale', 'exhale'])"
-   ],
-   "id": "bef822f875a599b4",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
+   "execution_count": null,
    "source": "",
-   "id": "4f39de4f47d2a124",
-   "outputs": [],
-   "execution_count": null
+   "id": "1befaf75f09a7700"
   }
  ],
  "metadata": {
