--- a/notebooks/frequency_analysis.ipynb
+++ b/notebooks/frequency_analysis.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T02:12:31.265841Z",
-     "start_time": "2025-05-07T02:12:31.240803Z"
+     "end_time": "2025-05-07T02:33:49.292376Z",
+     "start_time": "2025-05-07T02:33:49.254393Z"
     }
    },
    "cell_type": "code",
@@ -13,30 +13,21 @@
     "%autoreload 2"
    ],
    "id": "ff0e5cff8cc0fe8b",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "execution_count": 33
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-07T02:12:31.644187Z",
-     "start_time": "2025-05-07T02:12:31.630716Z"
+     "end_time": "2025-05-07T02:33:53.184398Z",
+     "start_time": "2025-05-07T02:33:49.331914Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from dewan_h5 import DewanH5\n",
-    "from sniffing_dynamics.sniffing import preprocessing, plotting, analysis\n",
+    "from sniffing_dynamics.sniffing.helpers import preprocessing, analysis, plotting\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -46,13 +37,13 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T02:13:02.195363Z",
-     "start_time": "2025-05-07T02:13:02.184376Z"
+     "end_time": "2025-05-07T02:33:55.642047Z",
+     "start_time": "2025-05-07T02:33:55.623794Z"
     }
    },
    "cell_type": "code",
@@ -68,15 +59,13 @@
    ],
    "id": "d33c157804c8c6e3",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 3
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-05-07T02:13:18.365624Z"
+     "end_time": "2025-05-07T02:37:47.916208Z",
+     "start_time": "2025-05-07T02:35:25.691559Z"
     }
    },
    "cell_type": "code",
@@ -126,8 +115,9 @@
     "                plotting.plot_crossing_frequencies(filtered_trimmed_trace, true_inhales, true_exhales, inhale_frequencies, exhale_frequencies, inhale_times, exhale_times, crossings, trial_number, plot_output_dir)\n",
     "            results_path = file_output_dir.joinpath(f'mouse-{h5.mouse}-{experiment_concentration}.xlsx')\n",
     "            results.to_excel(results_path)\n",
-    "    except Exception:\n",
-    "        print(f'Error processing H5 file {h5_file_path}')"
+    "    except Exception as e:\n",
+    "        print(f'Error processing H5 file {h5_file_path}')\n",
+    "        print(e)"
    ],
    "id": "bef822f875a599b4",
    "outputs": [
@@ -135,22 +125,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing mouse191_sess1_D2024_12_31T10_57_0.h5\n",
+      "ERROR! Session/line number was not unique in database. History logging moved to new session 32\n",
+      "Processing mouse199_sess1_D2024_12_28T19_2_23.h5\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse199_sess1_D2024_12_28T19_2_23.h5\n",
+      "single positional indexer is out-of-bounds\n",
+      "Processing mouse200_sess1_D2024_12_30T15_50_30.h5\n",
       "Error parsing licking and sniffing packets!\n",
-      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse191_sess1_D2024_12_31T10_57_0.h5\n",
-      "Processing mouse192_sess1_D2024_12_30T11_42_20.h5\n"
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse200_sess1_D2024_12_30T15_50_30.h5\n",
+      "Number of samples, -14241, must be non-negative.\n",
+      "Processing mouse200_sess1_D2025_1_3T14_36_32.h5\n",
+      "Error parsing licking and sniffing packets!\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse200_sess1_D2025_1_3T14_36_32.h5\n",
+      "Number of samples, -13592, must be non-negative.\n",
+      "Processing mouse200_sess1_D2025_1_2T15_24_2.h5\n",
+      "Processing mouse199_sess1_D2025_1_2T12_49_55.h5\n",
+      "Error parsing licking and sniffing packets!\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse199_sess1_D2025_1_2T12_49_55.h5\n",
+      "Number of samples, -34040, must be non-negative.\n",
+      "Processing mouse199_sess1_D2025_1_3T15_26_16.h5\n",
+      "Error parsing licking and sniffing packets!\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse199_sess1_D2025_1_3T15_26_16.h5\n",
+      "Number of samples, -19311, must be non-negative.\n",
+      "Processing mouse198_sess1_D2025_1_3T12_56_23.h5\n",
+      "Error parsing licking and sniffing packets!\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse198_sess1_D2025_1_3T12_56_23.h5\n",
+      "Number of samples, -18356, must be non-negative.\n",
+      "Processing mouse198_sess1_D2025_1_2T13_42_54.h5\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse198_sess1_D2025_1_2T13_42_54.h5\n",
+      "'Unable to synchronously open object (addr overflow, addr = 8116859, size = 2816, eoa = 3269379)'\n",
+      "Processing mouse193_sess1_D2025_1_2T17_6_10.h5\n",
+      "Processing mouse192_sess1_D2025_1_2T14_36_51.h5\n",
+      "Processing mouse195_sess1_D2025_1_25T13_34_4.h5\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse195_sess1_D2025_1_25T13_34_4.h5\n",
+      "index 0 is out of bounds for axis 0 with size 0\n",
+      "Processing mouse195_sess1_D2025_1_29T15_43_52.h5\n",
+      "Error parsing licking and sniffing packets!\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse195_sess1_D2025_1_29T15_43_52.h5\n",
+      "Number of samples, -8462, must be non-negative.\n",
+      "Processing mouse200_sess1_D2025_1_27T17_48_14.h5\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse200_sess1_D2025_1_27T17_48_14.h5\n",
+      "index 0 is out of bounds for axis 0 with size 0\n",
+      "Processing mouse199_sess1_D2025_1_27T16_52_1.h5\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse199_sess1_D2025_1_27T16_52_1.h5\n",
+      "index 0 is out of bounds for axis 0 with size 0\n",
+      "Processing mouse198_sess1_D2025_1_27T15_56_23.h5\n",
+      "Error parsing licking and sniffing packets!\n",
+      "Error processing H5 file /mnt/r2d2/11_Data/GoodSniffData/mouse198_sess1_D2025_1_27T15_56_23.h5\n",
+      "Number of samples, -43863, must be non-negative.\n",
+      "Processing mouse194_sess1_D2025_1_25T17_7_7.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "1befaf75f09a7700"
+   "id": "1befaf75f09a7700",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
